Correct for empty space between parent annotation and an overlapping annotation

--- a/src/index.css
+++ b/src/index.css
@@ -340,7 +340,7 @@ em {
 }
 
 .underlined-reviewed {
-  border-bottom-color: cyan;
+  border-bottom-color: #35a8a8;
 }
 
 .underlined-tei-rs {
